--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 #OracleDB Settings
+spring.datasource.tomcat.max-active=15
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 spring.datasource.url=jdbc:oracle:thin:@oracle.fiap.com.br:1521:ORCL
 spring.datasource.username=RM99643
@@ -9,6 +10,13 @@ spring.flyway.enabled=true
 spring.flyway.clean-disabled=true
 spring.flyway.baseline-on-migrate=true
 spring.flyway.locations=classpath:db/migration
+spring.flyway.table=apollo_flyway_schema_history
+spring.flyway.close-on-success=true
 
 #JPA Settings
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
+
+#HikariCP Settings
+spring.datasource.hikari.maximum-pool-size=12
+spring.datasource.hikari.idle-timeout=900000
+spring.datasource.hikari.minimum-idle=5
