--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,8 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle12cDialect
 #spring.datasource.hikari.maximum-pool-size=12
 #spring.datasource.hikari.idle-timeout=900000
 #spring.datasource.hikari.minimum-idle=5
+
+# CORS Settings
+cors.allowed-origins=*
+cors.allowed-methods=GET,POST,PUT,DELETE
+cors.allowed-headers=Authorization,Content-Type
